crates/ridlc/tests/snapshots/corpus__rust@veh-cluster.snap
---
source: crates/ridlc/tests/corpus.rs
expression: compiled.rust
input_file: crates/ridlc/tests/corpus/veh-cluster/ridl.toml
---
// ===== package veh.common =====
/// Vehicle speed over ground
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Speed(f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Speed> for f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
/// Coolant / ambient temperature
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Temperature(f64);
impl Temperature {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < -40.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 125.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Temperature {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Temperature> for f64 {
    fn from(value: Temperature) -> Self {
        value.0
    }
}
impl Default for Temperature {
    fn default() -> Self {
        Temperature::new_unchecked(0.0)
    }
}
/// Engine crankshaft speed
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct RPM(f64);
impl RPM {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 8000.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for RPM {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<RPM> for f64 {
    fn from(value: RPM) -> Self {
        value.0
    }
}
impl Default for RPM {
    fn default() -> Self {
        RPM::new_unchecked(0.0)
    }
}
/// Normalised ratio
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Ratio(f64);
impl Ratio {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 100.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Ratio {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Ratio> for f64 {
    fn from(value: Ratio) -> Self {
        value.0
    }
}
impl Default for Ratio {
    fn default() -> Self {
        Ratio::new_unchecked(0.0)
    }
}
#[repr(transparent)]
pub struct Counter(i64);
impl Counter {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: i64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Counter",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 65535 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Counter",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl TryFrom<i64> for Counter {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Counter> for i64 {
    fn from(value: Counter) -> Self {
        value.0
    }
}
impl Default for Counter {
    fn default() -> Self {
        Counter::new_unchecked(0)
    }
}
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Gain(f64);
impl Gain {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 1.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Gain {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Gain> for f64 {
    fn from(value: Gain) -> Self {
        value.0
    }
}
impl Default for Gain {
    fn default() -> Self {
        Gain::new_unchecked(0.0)
    }
}
pub const MAX_SPEED: Speed = Speed::new_unchecked(250.0);
pub const SPEED_LIMIT_EU: Speed = Speed::new_unchecked(130.0);
pub const MAX_GEAR: i64 = 6;
pub const IDLE_RPM: RPM = RPM::new_unchecked(800.0);
#[repr(i64)]
pub enum GearPosition {
    PARK = 0,
    DRIVE = 1,
    REVERSE = 2,
    NEUTRAL = 3,
}
impl Default for GearPosition {
    fn default() -> Self {
        GearPosition::PARK
    }
}
#[repr(i64)]
pub enum Warning {
    LOW_FUEL = 0,
    CHECK_ENGINE = 1,
    DOOR_OPEN = 2,
    SEATBELT = 3,
}
impl Default for Warning {
    fn default() -> Self {
        Warning::LOW_FUEL
    }
}
#[repr(transparent)]
pub struct WarningFlags(pub i64);
impl WarningFlags {
    pub const LOW_FUEL: WarningFlags = WarningFlags(1 << 0);
    pub const CHECK_ENGINE: WarningFlags = WarningFlags(1 << 1);
    pub const DOOR_OPEN: WarningFlags = WarningFlags(1 << 2);
    pub const SEATBELT: WarningFlags = WarningFlags(1 << 3);
}
impl Default for WarningFlags {
    fn default() -> Self {
        WarningFlags(0)
    }
}
#[repr(C)]
pub struct SpeedLimitPayload {
    pub limit: Speed,
    pub actual: Speed,
}
impl Default for SpeedLimitPayload {
    fn default() -> Self {
        SpeedLimitPayload {
            limit: Speed::default(),
            actual: Speed::default(),
        }
    }
}
pub struct DriverProfile {
    pub name: crate::ridl::std::Name,
    pub speed: Speed,
    pub r#override: Option<Speed>,
    pub gears: i64,
}
pub struct SensorBounds {
    pub range: SensorBoundsRange,
    pub readings: [Speed; 8],
    pub labels: Vec<crate::ridl::std::Label>,
    pub meta: Vec<(crate::ridl::std::Label, crate::ridl::std::Name)>,
}
pub enum SensorResult {
    Ok(SensorReading),
    Err(SensorFault),
}
impl Default for SensorResult {
    fn default() -> Self {
        SensorResult::Ok(SensorReading::default())
    }
}
#[repr(C)]
pub struct SensorReading {
    pub value: Speed,
    pub timestamp: crate::ridl::std::Timestamp,
}
impl Default for SensorReading {
    fn default() -> Self {
        SensorReading {
            value: Speed::default(),
            timestamp: crate::ridl::std::Timestamp::default(),
        }
    }
}
pub struct SensorFault {
    pub code: Counter,
    pub message: crate::ridl::std::Message,
}
pub(crate) struct RawWheelFrame {
    pub ticks: Counter,
    pub frame: Vec<u8>,
}
pub struct SensorBoundsRange {
    pub min: Speed,
    pub max: Speed,
}
impl Default for SensorBoundsRange {
    fn default() -> Self {
        SensorBoundsRange {
            min: Speed::default(),
            max: Speed::default(),
        }
    }
}


// ===== package veh.cluster =====
#[repr(C)]
pub struct DoorPayload {
    pub sensorId: i64,
    pub isOpen: bool,
}
impl Default for DoorPayload {
    fn default() -> Self {
        DoorPayload {
            sensorId: 0,
            isOpen: false,
        }
    }
}
pub struct DiagFilter {
    pub severity: i64,
    pub category: Option<crate::ridl::std::Label>,
}
impl Default for DiagFilter {
    fn default() -> Self {
        DiagFilter {
            severity: 0,
            category: None,
        }
    }
}
pub struct FaultEvent {
    pub code: i64,
    pub message: crate::ridl::std::Message,
    pub timestamp: crate::ridl::std::Timestamp,
}
#[repr(i64)]
pub enum DiagError {
    FILTER_INVALID = 0,
    STORAGE_BUSY = 1,
    ACCESS_DENIED = 2,
}
impl Default for DiagError {
    fn default() -> Self {
        DiagError::FILTER_INVALID
    }
}
pub struct FaultPage {
    pub faults: Vec<FaultEvent>,
}
impl Default for FaultPage {
    fn default() -> Self {
        FaultPage { faults: Vec::new() }
    }
}
/// A package-private payload type, so the interaction layer's legal
/// `internal`-over-`internal` case is exercised inside one package. The
/// cross-package counterpart is impossible by construction: a foreign
/// `internal` name never resolves (typl §3.3).
#[repr(transparent)]
pub(crate) struct RawTickCount(i64);
impl RawTickCount {
    /// Constructs the value, enforcing its typl constraints.
    pub(crate) fn new(value: i64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RawTickCount",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 65535 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RawTickCount",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub(crate) const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub(crate) const fn get(self) -> i64 {
        self.0
    }
}
impl TryFrom<i64> for RawTickCount {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<RawTickCount> for i64 {
    fn from(value: RawTickCount) -> Self {
        value.0
    }
}
impl Default for RawTickCount {
    fn default() -> Self {
        RawTickCount::new_unchecked(0)
    }
}
/// The window of raw tick counts a wheel diagnostic covers.
#[repr(C)]
pub(crate) struct RawWheelSpan {
    pub span: RawWheelSpanSpan,
    pub bursts: [RawWheelSpanBurstsElement; 2],
}
impl Default for RawWheelSpan {
    fn default() -> Self {
        RawWheelSpan {
            span: RawWheelSpanSpan::default(),
            bursts: ::core::array::from_fn(|_| RawWheelSpanBurstsElement::default()),
        }
    }
}
#[repr(transparent)]
pub struct FanLevel(i64);
impl FanLevel {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: i64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "FanLevel",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 7 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "FanLevel",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl TryFrom<i64> for FanLevel {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<FanLevel> for i64 {
    fn from(value: FanLevel) -> Self {
        value.0
    }
}
impl Default for FanLevel {
    fn default() -> Self {
        FanLevel::new_unchecked(0)
    }
}
#[repr(C)]
pub struct FilterState {
    pub hoursRun: i64,
    pub clogged: bool,
}
impl Default for FilterState {
    fn default() -> Self {
        FilterState {
            hoursRun: 0,
            clogged: false,
        }
    }
}
#[repr(C)]
pub struct ClimateReport {
    pub cabin: crate::veh::common::Temperature,
    pub setpoint: crate::veh::common::Temperature,
    pub fan: FanLevel,
}
impl Default for ClimateReport {
    fn default() -> Self {
        ClimateReport {
            cabin: crate::veh::common::Temperature::default(),
            setpoint: crate::veh::common::Temperature::default(),
            fan: FanLevel::default(),
        }
    }
}
#[repr(i64)]
pub enum HvacError {
    COMPRESSOR_OFF = 0,
    SENSOR_FAULT = 1,
}
impl Default for HvacError {
    fn default() -> Self {
        HvacError::COMPRESSOR_OFF
    }
}
/// A declared constant, so a contract clause can reference one. The guaranteed
/// expression subset admits constants (ridl §13) and nothing in the corpus
/// exercised that until these members were added.
pub const MAX_FAN: FanLevel = FanLevel::new_unchecked(7);
/// The ceiling a fan request is clamped to.
pub const FAN_CEILING: FanLevel = FanLevel::new_unchecked(7);
/// The same ceiling, one hop further along the chain.
pub const FAN_LIMIT: FanLevel = FanLevel::new_unchecked(7);
/// The label a cabin fan reports itself under.
#[repr(transparent)]
pub struct FanTag(String);
impl FanTag {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: String) -> Result<Self, ::ridl_rt::payload::Violation> {
        if (value.chars().count() as u64) < 1 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "FanTag",
                rule: ::ridl_rt::payload::Rule::Length,
            });
        }
        if (value.chars().count() as u64) > 32 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "FanTag",
                rule: ::ridl_rt::payload::Rule::Length,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: String) -> Self {
        Self(value)
    }
    pub fn get(&self) -> &str {
        &self.0
    }
    pub fn into_inner(self) -> String {
        self.0
    }
}
impl TryFrom<String> for FanTag {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: String) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<FanTag> for String {
    fn from(value: FanTag) -> Self {
        value.0
    }
}
impl Default for FanTag {
    fn default() -> Self {
        FanTag::new_unchecked("unset".to_string())
    }
}
/// The cabin fan's label.
pub const FAN_TAG: &str = "cabin-fan";
/// The same label, reached through the constant above.
pub const FAN_LABEL: &str = "cabin-fan";
pub(crate) struct RawWheelSpanSpan {
    pub first: RawTickCount,
    pub latest: RawTickCount,
}
impl Default for RawWheelSpanSpan {
    fn default() -> Self {
        RawWheelSpanSpan {
            first: RawTickCount::default(),
            latest: RawTickCount::default(),
        }
    }
}
pub(crate) struct RawWheelSpanBurstsElement {
    pub first: RawTickCount,
    pub latest: RawTickCount,
}
impl Default for RawWheelSpanBurstsElement {
    fn default() -> Self {
        RawWheelSpanBurstsElement {
            first: RawTickCount::default(),
            latest: RawTickCount::default(),
        }
    }
}
