crates/ridlc/tests/snapshots/corpus__rust@veh-common.snap
---
source: crates/ridlc/tests/corpus.rs
expression: compiled.rust
input_file: crates/ridlc/tests/corpus/veh-common/ridl.toml
---
// ===== package veh.common =====
/// Vehicle speed over ground
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Speed(f64);
impl Speed {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 250.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Speed",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Speed {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Speed> for f64 {
    fn from(value: Speed) -> Self {
        value.0
    }
}
impl Default for Speed {
    fn default() -> Self {
        Speed::new_unchecked(0.0)
    }
}
/// Coolant / ambient temperature
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Temperature(f64);
impl Temperature {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < -40.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 125.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Temperature",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Temperature {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Temperature> for f64 {
    fn from(value: Temperature) -> Self {
        value.0
    }
}
impl Default for Temperature {
    fn default() -> Self {
        Temperature::new_unchecked(0.0)
    }
}
/// Engine crankshaft speed
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct RPM(f64);
impl RPM {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 8000.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "RPM",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for RPM {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<RPM> for f64 {
    fn from(value: RPM) -> Self {
        value.0
    }
}
impl Default for RPM {
    fn default() -> Self {
        RPM::new_unchecked(0.0)
    }
}
/// Normalised ratio
///
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Ratio(f64);
impl Ratio {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 100.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Ratio",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Ratio {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Ratio> for f64 {
    fn from(value: Ratio) -> Self {
        value.0
    }
}
impl Default for Ratio {
    fn default() -> Self {
        Ratio::new_unchecked(0.0)
    }
}
#[repr(transparent)]
pub struct Counter(i64);
impl Counter {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: i64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Counter",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 65535 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Counter",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: i64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> i64 {
        self.0
    }
}
impl TryFrom<i64> for Counter {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: i64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Counter> for i64 {
    fn from(value: Counter) -> Self {
        value.0
    }
}
impl Default for Counter {
    fn default() -> Self {
        Counter::new_unchecked(0)
    }
}
/// Quantization (`step`) is not checked by `new`.
#[repr(transparent)]
pub struct Gain(f64);
impl Gain {
    /// Constructs the value, enforcing its typl constraints.
    pub fn new(value: f64) -> Result<Self, ::ridl_rt::payload::Violation> {
        if value < 0.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        if value > 1.0 {
            return Err(::ridl_rt::payload::Violation {
                type_name: "Gain",
                rule: ::ridl_rt::payload::Rule::Range,
            });
        }
        Ok(Self(value))
    }
    /// Constructs the value without checking its constraints.
    ///
    /// Safe: nothing here relies on the invariant for memory
    /// soundness. Use it only for a value already known to satisfy
    /// the contract.
    pub const fn new_unchecked(value: f64) -> Self {
        Self(value)
    }
    pub const fn get(self) -> f64 {
        self.0
    }
}
impl TryFrom<f64> for Gain {
    type Error = ::ridl_rt::payload::Violation;
    fn try_from(value: f64) -> Result<Self, Self::Error> {
        Self::new(value)
    }
}
impl From<Gain> for f64 {
    fn from(value: Gain) -> Self {
        value.0
    }
}
impl Default for Gain {
    fn default() -> Self {
        Gain::new_unchecked(0.0)
    }
}
pub const MAX_SPEED: Speed = Speed::new_unchecked(250.0);
pub const SPEED_LIMIT_EU: Speed = Speed::new_unchecked(130.0);
pub const MAX_GEAR: i64 = 6;
pub const IDLE_RPM: RPM = RPM::new_unchecked(800.0);
#[repr(i64)]
pub enum GearPosition {
    PARK = 0,
    DRIVE = 1,
    REVERSE = 2,
    NEUTRAL = 3,
}
impl Default for GearPosition {
    fn default() -> Self {
        GearPosition::PARK
    }
}
#[repr(i64)]
pub enum Warning {
    LOW_FUEL = 0,
    CHECK_ENGINE = 1,
    DOOR_OPEN = 2,
    SEATBELT = 3,
}
impl Default for Warning {
    fn default() -> Self {
        Warning::LOW_FUEL
    }
}
#[repr(transparent)]
pub struct WarningFlags(pub i64);
impl WarningFlags {
    pub const LOW_FUEL: WarningFlags = WarningFlags(1 << 0);
    pub const CHECK_ENGINE: WarningFlags = WarningFlags(1 << 1);
    pub const DOOR_OPEN: WarningFlags = WarningFlags(1 << 2);
    pub const SEATBELT: WarningFlags = WarningFlags(1 << 3);
}
impl Default for WarningFlags {
    fn default() -> Self {
        WarningFlags(0)
    }
}
#[repr(C)]
pub struct SpeedLimitPayload {
    pub limit: Speed,
    pub actual: Speed,
}
impl Default for SpeedLimitPayload {
    fn default() -> Self {
        SpeedLimitPayload {
            limit: Speed::default(),
            actual: Speed::default(),
        }
    }
}
pub struct DriverProfile {
    pub name: crate::ridl::std::Name,
    pub speed: Speed,
    pub r#override: Option<Speed>,
    pub gears: i64,
}
pub struct SensorBounds {
    pub range: SensorBoundsRange,
    pub readings: [Speed; 8],
    pub labels: Vec<crate::ridl::std::Label>,
    pub meta: Vec<(crate::ridl::std::Label, crate::ridl::std::Name)>,
}
pub enum SensorResult {
    Ok(SensorReading),
    Err(SensorFault),
}
impl Default for SensorResult {
    fn default() -> Self {
        SensorResult::Ok(SensorReading::default())
    }
}
#[repr(C)]
pub struct SensorReading {
    pub value: Speed,
    pub timestamp: crate::ridl::std::Timestamp,
}
impl Default for SensorReading {
    fn default() -> Self {
        SensorReading {
            value: Speed::default(),
            timestamp: crate::ridl::std::Timestamp::default(),
        }
    }
}
pub struct SensorFault {
    pub code: Counter,
    pub message: crate::ridl::std::Message,
}
pub(crate) struct RawWheelFrame {
    pub ticks: Counter,
    pub frame: Vec<u8>,
}
pub struct SensorBoundsRange {
    pub min: Speed,
    pub max: Speed,
}
impl Default for SensorBoundsRange {
    fn default() -> Self {
        SensorBoundsRange {
            min: Speed::default(),
            max: Speed::default(),
        }
    }
}
